--- a/src/app/shared/table-view/table-view.component.html
+++ b/src/app/shared/table-view/table-view.component.html
@@ -1,40 +1,4 @@
-<!-- <div class="tw-m-24-px">
-  <div class="tw-mb-24-px tw-text-24-px">
-    Top {{ booksList.length }} book{{ booksList.length > 1 ? 's' : '' }} on
-    {{ subjectName }}
-  </div>
-
-  <ng-container>
-    <table class="table-view">
-      <thead>
-        <tr class="table-row">
-          <th class="header">Title and Sub Title</th>
-          <th class="header">Author</th>
-          <th class="header">First Publish Year</th>
-        </tr>
-      </thead>
-      <tbody class="table-body">
-        <tr *ngFor="let book of booksList" class="row-data">
-          <td>
-            <a
-              class="tw-no-underline"
-              href="https://openlibrary.org{{ book.key }}"
-              target="_blank"
-              >{{ book.title }}</a
-            >
-          </td>
-          <td>
-            {{ book.authors?.[0]?.name || book.author_name?.[0] ||  "Unknown" }}
-          </td>
-          <td>{{ book.first_publish_year }}</td>
-        </tr>
-      </tbody>
-    </table>
-  </ng-container>
-</div> -->
-
-<mat-table [dataSource]="booksList.data" class="tw-flex-1 tw-w-full tw-h-full">
-  <!-- Name Column -->
+<mat-table [dataSource]="booksList.data" class="mat-elevation-z8 tw-flex-1 tw-w-full tw-h-full tw-p-10">
   <ng-container matColumnDef="title">
     <mat-header-cell class="header-bold" *matHeaderCellDef
       >Title</mat-header-cell
