--- a/src/app/shared/table-view/table-view.component.scss
+++ b/src/app/shared/table-view/table-view.component.scss
@@ -1,5 +1,5 @@
 .header-bold{
-  background-color: #abf2f2 !important;
+  background-color: #3ce7e7 !important;
 
   @apply
   tw-font-bold
@@ -7,4 +7,12 @@
 
 .mat-column-title {
   flex: 0 0 33%;
+}
+
+table td, table th {
+  padding: 2px 10px;
+}
+
+table {
+  width: 100px;
 }
